--- a/css/styles.css
+++ b/css/styles.css
@@ -60,8 +60,8 @@ body {
     letter-spacing: 0.02em;
     color: #434455;
 }
-.contacts .link:hover,
-.contacts .link:focus {
+.contacts-menu:hover,
+.contacts-menu:focus {
     color: #4D5AE5;
 }
 .section-first {
