--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,3 @@
-raleway-<uniquifier> {
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-style: normal;
-}
 body {
     font-family: "Roboto", sans-serif;
     color: #434455;
@@ -62,7 +56,7 @@ body {
 }
 .contacts-menu .link:hover,
 .contacts-menu .link:focus {
-    color: #4D5AE5;
+    color: #404bbf;
 }
 .section-first {
    background-color: #2E2F42;
@@ -85,10 +79,11 @@ body {
     letter-spacing: 0.04em;
     color: #fff;
     background-color: #4d5ae5;
+    cursor: pointer;
 }
 .button1 .link:hover,
 .button1 .link:focus {
-    color: #4D5AE5;
+    color: #404BBF;
 }
 .post-title {
     font-family: "Roboto", sans-serif;
