--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
 .nav-logo .link:focus {
     color: #4D5AE5;
 }
-.accent {
+.accent-header {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -141,7 +141,7 @@ body {
     letter-spacing: 0.02em;
     color: #f4f4fd;
 }
-.accent1 {
+.accent-footer {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
