--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,15 @@ body {
     line-height: 24px;
     background-color: #ffffff;
 }
+
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
 .nav-logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -14,10 +23,7 @@ body {
     text-transform: uppercase;
     color: #4d5ae5;
 }
-.nav-logo .link:hover,
-.nav-logo .link:focus {
-    color: #4D5AE5;
-}
+
 .accent-header {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -27,7 +33,8 @@ body {
     text-transform: uppercase;
     color: #2e2f42;
 }
-.nav {
+
+.nav-item {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -36,17 +43,17 @@ body {
     color: #2e2f42;
     background-color: #ffffff;
 }
-.nav .link:hover,
-.nav .link:focus {
+
+.nav-item-link:hover,
+.nav-item-link:focus {
     color: #404bbf;
 }
-.nav-list .link {
-    color: #2e2f42;
-}
-.adres {
+
+.contacts {
     font-style: normal;
 }
-.contacts-menu {
+
+.contacts-item {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 16px;
@@ -54,13 +61,16 @@ body {
     letter-spacing: 0.02em;
     color: #434455;
 }
-.contacts-menu .link:hover,
-.contacts-menu .link:focus {
+
+.contacts-item-link:hover,
+.contacts-item-link:focus {
     color: #404bbf;
 }
-.section-first {
+
+.section-title {
    background-color: #2E2F42;
 }
+
 .title {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
@@ -71,7 +81,8 @@ body {
     color: #fff;
     text-transform: capitalize;
 }
-.button-first {
+
+.title-button {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -81,10 +92,23 @@ body {
     background-color: #4d5ae5;
     cursor: pointer;
 }
-.button1 .link:hover,
-.button1 .link:focus {
-    color: #404BBF;
+.title-button:hover,
+.title-button:focus {
+    background-color: #404BBF
 }
+
+.visually-hidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap;
+}
+
 .post-title {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
@@ -95,9 +119,7 @@ body {
     color: #2e2f42;
     text-transform: capitalize;
 }
-.our-team {
-    background-color: #FFFFFF;
-}
+
 .subtitle {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
@@ -106,6 +128,7 @@ body {
     letter-spacing: 0.02em;
     color: #2e2f42;
 }
+
 .text {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
@@ -114,16 +137,24 @@ body {
     letter-spacing: 0.02em;
     color: #434455;
 }
-.portfolio .link:hover,
+
+.our-team {
+    background-color: #FFFFFF;
+}
+
+.section-team {
+    background-color: #F4F4FD;
+}
+
+      .portfolio .link:hover,
 .portfolio .link:focus {
     color: #4D5AE5;
 }
-.section-third {
-    background-color: #F4F4FD;
-}
-.footer {
+
+footer {
     background-color: #2E2F42;
 }
+
 .logo-footer {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -133,14 +164,7 @@ body {
     text-transform: uppercase;
     color: #4d5ae5;
 }
-.text-footer {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #f4f4fd;
-}
+
 .accent-footer {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -148,5 +172,14 @@ body {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    color: #f4f4fd;
+}
+
+.text-footer {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     color: #f4f4fd;
 }
