--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ a {
     color: #2e2f42;
 }
 
-.nav-item {
+.navigation .nav-item {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -53,7 +53,7 @@ a {
     font-style: normal;
 }
 
-.contacts-item {
+.contacts-list .contacts-item {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 16px;
@@ -138,20 +138,15 @@ a {
     color: #434455;
 }
 
-.our-team {
-    background-color: #FFFFFF;
-}
-
 .section-team {
     background-color: #F4F4FD;
 }
 
-      .portfolio .link:hover,
-.portfolio .link:focus {
-    color: #4D5AE5;
+.our-team {
+    background-color: #FFFFFF;
 }
 
-footer {
+.footer {
     background-color: #2E2F42;
 }
 
