--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ a {
     color: #2e2f42;
 }
 
-.navigation .nav-item {
+.nav-list .nav-item-link {
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -53,7 +53,7 @@ a {
     font-style: normal;
 }
 
-.contacts-list .contacts-item {
+.contacts-list .contacts-item-link {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     font-size: 16px;
