--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ a {
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: #fff;
+    text-align: center;
     text-transform: capitalize;
 }
 
@@ -114,6 +115,7 @@ a {
     line-height: 1.11;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    text-align: center;
     text-transform: capitalize;
 }
 
