--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ a {
     background-color: #404BBF
 }
 
-.visually-hidden {
+/*--------.visually-hidden {
     border: 0;
     clip: rect(0 0 0 0);
     height: 1px;
@@ -107,7 +107,7 @@ a {
     width: 1px;
     white-space: nowrap;
 }
-
+----------*/
 .post-title {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
